# cpm-cmake-sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake
build_x86/CPM_modules/: Findgflags.cmake  Findgoogletest.cmake
build_x86/src/: Makefile  cmake_install.cmake  cpm_test
cicd/: build_x86_ubuntu.sh
cmake/: extern_dep.cmake
log/: latest_list
src/: CMakeLists.txt  test.cpp
